[package]
name = "substrate-adapter"
version = "0.9.26-bf54653"
edition = "2021"

[dependencies]
base64        = "0.13"
clap          = { version="3", features = ["cargo"] }
data-encoding = "2.3"
hex           = "0.4"
serde_yaml    = "0.8"

# scale-codec
parity-scale-codec = "3.0"

# state-trie 
reference-trie = "0.25"
keccak-hasher  = "0.15"
memory-db      = "0.29"
hash-db        = "0.15"
trie-db        = "0.23"
trie-root      = "0.17"

# state-trie blake2 hashing (TODO: Use substrate implementation?)
sp-serializer      = { git = "https://github.com/paritytech/substrate", branch = "master" }
primitive-types    = { version = "0.2",  default-features = false, features = ["codec"] }
hash256-std-hasher = { version = "0.12", default-features = false }
blake2-rfc         = "*"

# host-api
sp-core            = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io              = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor        = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore        = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine   = { git = "https://github.com/paritytech/substrate", branch = "master" }
