[package]
name = "substrate-adapter"
version = "0.9.31-f0e1ed0"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
base64        = "0.13"
clap          = { version="3", features = ["cargo"] }
data-encoding = "2.3"
hex           = "0.4"
serde_yaml    = "0.8"

# scale-codec
parity-scale-codec = "3.0"

# state-trie 
reference-trie = "0.25"
keccak-hasher  = "0.15"
memory-db      = "0.30"
hash-db        = "0.15"
trie-db        = "0.23"
trie-root      = "0.17"

# host-api
sp-core            = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io              = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sc-executor        = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-keystore        = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-state-machine   = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
