[package]
name = 'host-tester'
version = "0.9.30-a060975"
edition = '2021'
resolver = "2"

[dependencies.tester-runtime]
path = "runtime"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-babe]
package = 'sp-consensus-babe'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-grandpa]
package = 'sp-finality-grandpa'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[features]
legacy = [ "tester-runtime/legacy" ]

[workspace]
members = [ "runtime" ]
