[package]
name = 'host-tester'
edition.workspace = true
version.workspace = true

[workspace.package]
edition = '2021'
version = "0.9.31-f0e1ed0"

[profile.release]
panic = 'unwind'


[dependencies.tester-runtime]
path = "runtime"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-babe]
package = 'sp-consensus-babe'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-grandpa]
package = 'sp-finality-grandpa'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[features]
legacy = [ "tester-runtime/legacy" ]

[workspace]
members = [ "runtime" ]
